--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "express-api for orderAlgorithm",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tobias Trinks",
